--- a/tictac.html
+++ b/tictac.html
@@ -11,32 +11,39 @@
 
 <h1>Tic-Tac-Toe</h1>
 <div class="turn-indicador">Turno de:
-    <span id="turno"></span>
+    <!-- <span id="turno"></span> -->
 </div>
 
 <div class="board">
-<div class="cell" > 0</div>
+    <div class="cell" ></div>
 
-<div class="cell" > 1</div>
+    <div class="cell" ></div>
 
-<div class="cell" > 2</div>
+    <div class="cell" ></div>
 
-<div class="cell" > 3</div>
+    <div class="cell" ></div>
 
-<div class="cell"> 4</div>
+    <div class="cell"></div>
 
-<div class="cell" > 5</div>
+    <div class="cell" ></div>
 
-<div class="cell" > 6</div>
+    <div class="cell" ></div>
 
-<div class="cell" > 7</div>
+    <div class="cell" ></div>
 
-<div class="cell"> 8</div>
+    <div class="cell"> </div>
 
 </div>
+
 <div class="status-message" id="mensaje"></div>
 
 <button id="reiniciar">Reiniciar Juego</button>
+
+</div>
+
+<div id=contadores>
+    <p id="jugadorX">0</p>
+    <p id="jugadorO">0</p>
 
 </div>
 
